[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 448.0
margin_top = 576.0
margin_right = -448.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"
icon_align = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BossButton" type="Button" parent="."]
anchor_left = 0.706
anchor_top = 0.811
anchor_right = 0.841
anchor_bottom = 0.917
margin_left = -7.68005
margin_top = -7.92004
margin_right = 0.52002
margin_bottom = -0.240051
custom_fonts/font = SubResource( 1 )
text = "Boss"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="BossButton" to="." method="_on_BossButton_pressed"]
